--- a/package.json
+++ b/package.json
@@ -3,15 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/react": "16.9.2",
-    "@types/styled-components": "4.1.19",
     "bootstrap": "4.3.1",
     "react": "16.9.0",
     "react-bootstrap": "1.0.0-beta.12",
     "react-dom": "16.9.0",
     "react-scripts": "3.1.1",
-    "styled-components": "4.4.0",
-    "typescript": "3.6.3"
+    "styled-components": "4.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -35,6 +32,9 @@
     ]
   },
   "devDependencies": {
-    "babel-plugin-styled-components": "1.10.6"
+    "@types/react": "^16.9.9",
+    "@types/styled-components": "^4.1.19",
+    "babel-plugin-styled-components": "1.10.6",
+    "typescript": "^3.6.4"
   }
 }
