--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "body-parser": "1.19.0",
     "bootstrap": "4.3.1",
+    "express": "4.17.1",
+    "mysql": "2.17.1",
     "react": "16.9.0",
     "react-bootstrap": "1.0.0-beta.12",
     "react-dom": "16.9.0",
@@ -32,9 +35,12 @@
     ]
   },
   "devDependencies": {
-    "@types/react": "^16.9.9",
-    "@types/styled-components": "^4.1.19",
+    "@types/body-parser": "1.17.1",
+    "@types/express": "4.17.1",
+    "@types/mysql": "2.15.7",
+    "@types/react": "16.9.9",
+    "@types/styled-components": "4.1.19",
     "babel-plugin-styled-components": "1.10.6",
-    "typescript": "^3.6.4"
+    "typescript": "3.6.4"
   }
 }
