--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "private": true,
   "dependencies": {
     "bootstrap": "4.3.1",
+    "mysql": "2.14.1",
     "react": "16.9.0",
     "react-bootstrap": "1.0.0-beta.12",
     "react-dom": "16.9.0",
     "react-scripts": "3.1.1",
-    "styled-components": "4.4.0"
+    "reflect-metadata": "0.1.10",
+    "styled-components": "4.4.0",
+    "typeorm": "0.2.20"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -32,9 +35,11 @@
     ]
   },
   "devDependencies": {
-    "@types/react": "^16.9.9",
+    "@types/node": "8.0.29",
+    "@types/react": "16.9.9",
     "@types/styled-components": "^4.1.19",
     "babel-plugin-styled-components": "1.10.6",
-    "typescript": "^3.6.4"
+    "ts-node": "3.3.0",
+    "typescript": "3.3.3333"
   }
 }
