--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "react-bootstrap": "1.0.0-beta.12",
     "react-dom": "16.9.0",
     "react-scripts": "3.1.1",
-    "styled-components": "4.4.0"
+    "styled-components": "4.4.0",
+    "typedi": "0.8.0"
   },
   "scripts": {
     "start": "react-scripts start",
